kubernetes/apps/base/flux-system/headlamp/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-dashboard
spec:
  hostnames: ["headlamp.${DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: ${DOMAIN}-https
  rules:
    - backendRefs:
        - name: headlamp
          namespace: flux-system
          port: 80
